processed/gerrit/txt/24827.txt
Change:     24827
Subject:    LU-9010 obdclass: use static initializer macros where possible
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/24827
Change-Id:  I5514992762b95fb23a154970abebd34fb65d9be2
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      John Hammond
Created:    2017-01-11 17:05:05.000000000
Updated:    2017-03-23 01:41:23.000000000
Patch Set:  3
Insertions: +55
Deletions:  -126
Comments:   2 (0 unresolved)

--- Labels ---
  Code-Review: Dmitry Eremin: +1; Steve Guminski: +1; Oleg Drokin: +2
  Verified: Jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, James Simmons, Dmitry Eremin, Lustre Buildbot, Steve Guminski

--- Commit Message ---
LU-9010 obdclass: use static initializer macros where possible

In lustre/ldlm/ replace module load time initialization of several
atomics, lists, locks, mutexes, wait queues, etc with static
initialization using the kernel provided macros.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I5514992762b95fb23a154970abebd34fb65d9be2
Reviewed-on: https://review.whamcloud.com/24827
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Steve Guminski <stephenx.guminski@intel.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>

--- Review History ---

--- Message (John Hammond, 2017-01-11 17:05:05.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2017-01-11 17:08:04.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2017-01-11 17:45:17.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (Lustre Buildbot, 2017-01-11 17:59:34.000000000) ---
Patch Set 1:

Overall Build Status: SUCCESS

Builder CentOS 6.7 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/CentOS%206.7%20x86_64%20%28BUILD%29/builds/5930

Builder CentOS 6.8 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/CentOS%206.8%20x86_64%20%28BUILD%29/builds/2066

Builder CentOS 7.2 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/CentOS%207.2%20x86_64%20%28BUILD%29/builds/5916

Builder Ubuntu 14.04 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/Ubuntu%2014.04%20x86_64%20%28BUILD%29/builds/5876

--- Message (Jenkins, 2017-01-11 23:55:47.000000000) ---
Patch Set 1:

Build Started https://build.hpdd.intel.com/job/lustre-reviews/43559/

--- Message (Jenkins, 2017-01-12 00:22:39.000000000) ---
Patch Set 1: Verified+1

Build Successful 
 
https://build.hpdd.intel.com/job/lustre-reviews/43559/ : SUCCESS

--- Message (Autotest, 2017-01-12 00:33:17.000000000) ---
Patch Set 1:

Trevis Autotest2 started enforced review-ldiskfs session.

--- Message (Autotest, 2017-01-12 00:33:18.000000000) ---
Patch Set 1:

Trevis Autotest2 started enforced review-zfs-part-1 session.

--- Message (Autotest, 2017-01-12 00:33:23.000000000) ---
Patch Set 1:

Trevis Autotest2 started enforced review-dne-part-1 session.

--- Message (Autotest, 2017-01-12 00:33:27.000000000) ---
Patch Set 1:

Trevis Autotest2 started enforced review-zfs-part-2 session.

--- Message (Autotest, 2017-01-12 00:33:33.000000000) ---
Patch Set 1:

Trevis Autotest2 started enforced review-dne-part-2 session.

--- Message (wc-checkpatch, 2017-01-20 04:00:16.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Dmitry Eremin, 2017-03-09 14:56:31.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Steve Guminski, 2017-03-09 15:06:51.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2017-03-14 04:26:56.000000000) ---
Patch Set 1: Code-Review-1

this patch no longer builds on later master.

/home/green/git/lustre-release/lustre/obdclass/class_obd.c: In function Б─≤obdclass_initБ─≥:
/home/green/git/lustre-release/lustre/obdclass/class_obd.c:618:2: error: implicit declaration of function Б─≤class_exit_uuidlistБ─≥ [-Werror=implicit-function-declaration]
  class_exit_uuidlist();
  ^
cc1: all warnings being treated as errors

Come think of it, removal of class_exit_uuidlist should probably have been its own patch anyway

--- Message (John Hammond, 2017-03-14 14:06:27.000000000) ---
Uploaded patch set 2.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2017-03-14 14:10:43.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (Lustre Buildbot, 2017-03-14 14:19:01.000000000) ---
Patch Set 2:

Overall Build Status: SUCCESS

Builder CentOS 6.7 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/CentOS%206.7%20x86_64%20%28BUILD%29/builds/7197

Builder CentOS 6.8 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/CentOS%206.8%20x86_64%20%28BUILD%29/builds/3333

Builder CentOS 7.2 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/CentOS%207.2%20x86_64%20%28BUILD%29/builds/7183

Builder Ubuntu 14.04 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/Ubuntu%2014.04%20x86_64%20%28BUILD%29/builds/7143

--- Message (Jenkins, 2017-03-14 14:23:57.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.hpdd.intel.com/job/lustre-reviews/45410/ : SUCCESS

--- Message (Autotest, 2017-03-14 14:45:11.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-dne-part-2 session.

--- Message (Autotest, 2017-03-14 14:45:44.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-dne-part-1 session.

--- Message (Autotest, 2017-03-14 14:46:11.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-zfs-part-1 session.

--- Message (Autotest, 2017-03-14 14:48:27.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-zfs-part-2 session.

--- Message (Autotest, 2017-03-14 14:50:11.000000000) ---
Patch Set 2:

Trevis Autotest2 started enforced review-ldiskfs session.

--- Message (Steve Guminski, 2017-03-15 11:37:45.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Dmitry Eremin, 2017-03-15 15:37:38.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2017-03-23 01:13:23.000000000) ---
Patch Set 2: Code-Review+2

(2 comments)

--- Message (unknown, 2017-03-23 01:41:23.000000000) ---
Change has been successfully cherry-picked as d675a1fe48be5d86a3fdb9ccc9542a748cc007a0 by Oleg Drokin
